--- a/Assignment1/BA64060_Assignment1.html
+++ b/Assignment1/BA64060_Assignment1.html
@@ -9,6 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
+<meta name="author" content="Ruthvick Bulagakula" />
 
 <meta name="date" content="2023-09-08" />
 
@@ -350,6 +351,7 @@ display: none;
 
 
 <h1 class="title toc-ignore">BA64060_Assignment1</h1>
+<h4 class="author">Ruthvick Bulagakula</h4>
 <h4 class="date">2023-09-08</h4>
 
 </div>
